--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,14 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 server.port=8082
+
+
+app.servers[0].ip = 192.168.1.2
+app.servers[0].location = Germany
+
+app.servers[1].ip = 192.168.2.2
+app.servers[1].location = France
+
+app.servers[2].ip = 192.168.3.2
+app.servers[2].location = USA
+
